Tag deck updated. jQuery selector for checked/unchecked tag discovered but further manipulation is needed before it can filter the URL center panel

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -39,7 +39,9 @@
         <div id="TagDeck" class="col-12 col-lg-12 mb-md-1 p-3 panel">
             <div class="form-group">
                 <h2>Tags</h2>
-                <h5>No UTub Selected</h5>
+                <form id=listTags>                
+                    <h5>No UTub Selected</h5>
+                </form>
             </div>
         </div>
     </div>
