AJAX request on home gets a JSON of that UTub. Normal GET gets the UTub names and IDs.

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -10,14 +10,14 @@
     <p>Find your UTubs below</p>
 </div>
 
+<script type="text/javascript">
+    var jsArrayOfItems = JSON.parse('{{utubs_for_this_user|tojson|safe}}');
+</script>
 {% if not utubs %}
     <div class="d-flex justify-content-center flex-row">
         <p>No UTubs for you :(</p>
     </div>
 {% else %}
-    <script type="text/javascript">
-        var jsArrayOfItems = JSON.parse('{{utubs_json|tojson|safe}}');
-    </script>
     {% for single_utub in utubs %}
         <div class="d-flex justify-content-center flex-row">
             <h3>UTub: {{single_utub.name}}</h3> 
