--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -12,6 +12,7 @@
 
 <script type="text/javascript">
     var jsArrayOfItems = JSON.parse('{{utubs_for_this_user|tojson|safe}}');
+    console.log(jsArrayOfItems)
 </script>
 {% if not utubs %}
     <div class="d-flex justify-content-center flex-row">
