--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Personalized welcome tagline -->
 <div id="demo" class="d-flex justify-content-center flex-row">
-    <h1>Hello there  {{current_user.username}}.</h1>
+    <h1 id="welcome" user_id="{{current_user.id}}">Hello there  {{current_user.username}}.</h1>
 </div>
 
 <div class="row align-items-left content">
@@ -122,7 +122,7 @@
                 
                 <form id="deleteUTubTemp" action="#" method="post">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    <button class="btn btn-danger btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUserModal" href="#">Delete this UTub</button>
+                    <button class="btn btn-danger btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUTubModal" href="#">Delete this UTub</button>
                 </form>
                 
                 <!-- <form action="#" method="post">
@@ -151,7 +151,7 @@
             </div>
            
             <h5>Description</h5>
-            <p id="UTubInfo" class="lead">
+            <p id="UTubInfo" class="lead" contentEditable="true">
                 Storing email addresses in a PostGreSQL database
 
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
@@ -176,7 +176,7 @@
             <a id="DeleteURL" class="btn btn-danger btn-sm mb-3 mx-1" href="#">Delete this URL</a>
 
             <h5>Description</h5>
-            <p id="URLInfo" class="lead">
+            <p id="URLInfo" class="lead" contentEditable="true">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
                 beatae, maiores deserunt
             </p>
@@ -203,9 +203,5 @@
     
     <!-- Home Page JS -->
     <script src="{{ url_for('static', filename='scripts/home.js') }}"></script>
-    
-    <script>
-        my_func(JSON.parse('{{utubs_for_this_user|tojson|safe}}'));
-    </script>
 
 {% endblock %}
