--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -172,7 +172,7 @@
             <h5>Actions</h5> 
             <button id="URLLink" class="btn btn-success btn-sm mb-3 mx-1" onclick="AccessLink()">Access URL</button>
             <a id="addTags" class="btn btn-info btn-sm mb-3 mx-1" href="#">Add tags</a>
-            <a id="EditURL" class="btn btn-primary btn-sm mb-3 mx-1" href="#">Edit URL</a>
+            <button id="EditURL" class="btn btn-primary btn-sm mb-3 mx-1" onclick="EditURL()">Edit URL</button>
             <a id="DeleteURL" class="btn btn-danger btn-sm mb-3 mx-1" href="#">Delete this URL</a>
 
             <h5>Description</h5>
