--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -1,3 +1,10 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-y: hidden;
+}
+
 p {
     color: white;
 }
@@ -12,82 +19,298 @@ form {
 }
 
 img {
-    max-width:100%;
+    max-width: 50%;
 }
 
 input[type=checkbox] {
-    padding-left:10px;
-    padding-right:10px;
-    border-radius:15px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 15px;
 
-    -webkit-appearance:button;
+    -webkit-appearance: button;
 
     border: double 2px #00F;
 
-    background-color:#0b0095;
-    color:#FFF;
+    background-color: #0b0095;
+    color: #FFF;
     white-space: nowrap;
-    overflow:hidden;
+    overflow: hidden;
 
-    width:15px;
-    height:15px;
+    width: 15px;
+    height: 15px;
 }
 
 input[type=checkbox]:checked {
-    background-color:#000;
-    border-left-color:#06F;
-    border-right-color:#06F;
+    background-color: #000;
+    border-left-color: #06F;
+    border-right-color: #06F;
 }
 
 input[type=checkbox]:hover {
-    box-shadow:0px 0px 10px #1300ff;
+    box-shadow: 0px 0px 10px #1300ff;
 }
 
 input[type=radio] {
-    padding-left:5px;
-    padding-right:5px;
-    border-radius:15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 15px;
 
-    -webkit-appearance:button;
+    -webkit-appearance: button;
 
     border: double 2px #00F;
 
-    background-color:#0b0095;
-    color:#FFF;
+    background-color: #0b0095;
+    color: #FFF;
     white-space: nowrap;
-    overflow:hidden;
+    overflow: hidden;
 
-    width:15px;
-    height:15px;
+    width: 15px;
+    height: 15px;
 }
 
 input[type=radio]:checked {
-    background-color:#000;
-    border-left-color:#06F;
-    border-right-color:#06F;
+    background-color: #000;
+    border-left-color: #06F;
+    border-right-color: #06F;
 }
 
 input[type=radio]:hover {
-    box-shadow:0px 0px 10px #1300ff;
+    box-shadow: 0px 0px 10px #1300ff;
 }
 
 span.tag {
+    color: rgb(1, 254, 1);
     background: white;
     margin-left: 2px;
     margin-right: 2px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 6px;
+    padding-right: 6px;
     padding-top: 1px;
     padding-bottom: 1px;
     border-radius: 16px;
+    white-space: nowrap;
 }
+
+/* .row {
+    min-height: 100vh;
+} */
 
 .panel {
-    border-radius: 30px;
+    height: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    overflow-y: hidden;
 }
 
-.unselectedUTub {
-    display: none;
+.deck {
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    overflow-y: hidden;
+}
+
+.deckContent {
+    width: 100%;
+    height: 80%;
+    overflow-y: scroll;
+}
+
+.card {
+    background: rgb(84, 84, 84);
+    height: 100%;
+    margin: 2px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+/* Icon 1 */
+
+.animated-icon1, .animated-icon2, .animated-icon3 {
+    width: 30px;
+    height: 20px;
+    position: relative;
+    margin: 0px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+
+.animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+}
+
+.animated-icon1 span {
+    background: #e65100;
+}
+
+.animated-icon2 span {
+    background: #e3f2fd;
+}
+
+.animated-icon3 span {
+    background: #f3e5f5;
+}
+
+.animated-icon1 span:nth-child(1) {
+    top: 0px;
+}
+
+.animated-icon1 span:nth-child(2) {
+    top: 10px;
+}
+
+.animated-icon1 span:nth-child(3) {
+    top: 20px;
+}
+
+.animated-icon1.open span:nth-child(1) {
+    top: 11px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+
+.animated-icon1.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+}
+
+.animated-icon1.open span:nth-child(3) {
+    top: 11px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+}
+
+/* Icon 3*/
+
+.animated-icon2 span:nth-child(1) {
+    top: 0px;
+}
+
+.animated-icon2 span:nth-child(2), .animated-icon2 span:nth-child(3) {
+    top: 10px;
+}
+
+.animated-icon2 span:nth-child(4) {
+    top: 20px;
+}
+
+.animated-icon2.open span:nth-child(1) {
+    top: 11px;
+    width: 0%;
+    left: 50%;
+}
+
+.animated-icon2.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.animated-icon2.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.animated-icon2.open span:nth-child(4) {
+    top: 11px;
+    width: 0%;
+    left: 50%;
+}
+
+/* Icon 4 */
+
+.animated-icon3 span:nth-child(1) {
+    top: 0px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+}
+
+.animated-icon3 span:nth-child(2) {
+    top: 10px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+}
+
+.animated-icon3 span:nth-child(3) {
+    top: 20px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+}
+
+.animated-icon3.open span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 0px;
+    left: 8px;
+}
+
+.animated-icon3.open span:nth-child(2) {
+    width: 0%;
+    opacity: 0;
+}
+
+.animated-icon3.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 21px;
+    left: 8px;
+}
+
+#body {
+    min-height: 380px;
+    position: relative;
+}
+
+#mainPanel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    position: relative;
+    min-height: calc(100vh-56px);
+}
+
+#pageContent {
+    margin: 0;
 }
 
 #UTubDeck {
@@ -98,12 +321,14 @@ span.tag {
     background: orange;
 }
 
-#centerPanel {
+#UTubContent {
     background: gray;
+    width: 100%;
 }
 
 #UTubInfoDeck {
     background: blue;
+    overflow-y: auto;
 }
 
 #URLInfoDeck {
@@ -112,4 +337,5 @@ span.tag {
 
 #ChatDeck {
     background: green;
+    overflow-y: auto;
 }
