--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -23,7 +23,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/static/styles/app.css">
-    
+
     <!-- Add jQuery to aid with DOM manipulation -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -31,7 +31,7 @@
     <title>URLS4IRL</title>
 </head>
 
-<body>
+<body class="d-flex flex-column vh-100">
     <!-- Navigation Bar -->
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top">
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
@@ -56,16 +56,16 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 {% if current_user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+                </li>
                 {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('login')}}">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('register_user')}}">Register</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('login')}}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('register_user')}}">Register</a>
+                </li>
                 {% endif %}
             </ul>
         </div>
@@ -75,7 +75,7 @@
 
     <!-- Main Panel View -->
 
-    <section class="container-fluid px-1 py-5">
+    <main id="mainPanel" class="mx-0 bt-4 pt-0">
         <!-- Display flash messages on top -->
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -86,18 +86,16 @@
         </div>
         {% endif %}
         {% endwith %}
-        <!-- General welcome tagline -->
-        <div class="d-flex justify-content-center flex-row">
-            <h1>Welcome to URLS 4 IRL.</h1>
-            <span>REH</span>
+
+        <div id="pageContent" class="row" style="height: 100vh">
+            {% block content %}
+            {% endblock %}
         </div>
 
-        {% block content %}
-        {% endblock %}
-    </section>
+    </main>
 
     <!-- Main Panel View -->
-    
+    </div>
 </body>
 
 </html>
