--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -87,7 +87,7 @@
         {% endif %}
         {% endwith %}
 
-        <div id="pageContent" class="row" style="height: 100vh">
+        <div id="pageContent" class="row">
             {% block content %}
             {% endblock %}
         </div>
