--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -91,28 +91,25 @@ span.tag {
     white-space: nowrap;
 }
 
-/* .row {
-    min-height: 100vh;
-} */
-
 .panel {
     height: 100%;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
+    padding-top: 50px;
+    padding-bottom: 20px;
     overflow-y: hidden;
 }
 
 .deck {
     width: 100%;
     height: 100%;
+    margin: 0px;
     border-radius: 30px;
     overflow-y: hidden;
 }
 
 .deckContent {
     width: 100%;
-    height: 80%;
+    height: 90%;
+    margin: 0px;
     overflow-y: scroll;
 }
 
@@ -122,6 +119,16 @@ span.tag {
     margin: 2px;
     border-radius: 20px;
     cursor: pointer;
+}
+
+.fa-arrow-down {
+    transform: rotate(0deg);
+    transition: transform 100ms linear;
+}
+
+.fa-arrow-down.open {
+    transform: rotate(-90deg);
+    transition: transform 100ms linear;
 }
 
 /* Icon 1 */
@@ -311,6 +318,7 @@ span.tag {
 
 #pageContent {
     margin: 0;
+    height: 100vh;
 }
 
 #UTubDeck {
