Adjusting tag filter functionality to apply to cards

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -44,10 +44,10 @@
 <!-- Center Panel, URLs ("gray")-->
 
 <div id="centerPanel" class="panel col-md-7">
-    <div id="UTubContent" class="deck  h-100 mb-md-1 p-3">
+    <div id="UTubContent" class="deck h-100 mb-md-1 p-3">
         <h2 id="UTubHeader">Select a UTub</h2>
         <a id="addURL" class="btn btn-success btn-sm mb-3 justify-content-center" href="#">Add a URL</a>
-        <div class="deckContent row justify-content-center">
+        <div class="deckContent justify-content-center">
             <img id="TubImage"
                 src="https://images.unsplash.com/photo-1613271007499-130e4d331a46?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
                 alt="Select a Tub!">
