--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -103,13 +103,14 @@ span.tag {
     height: 100%;
     margin: 0px;
     border-radius: 30px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .deckContent {
     width: 100%;
     height: 90%;
     margin: 0px;
+    overflow-x: hidden;
     overflow-y: scroll;
 }
 
@@ -117,8 +118,13 @@ span.tag {
     background: rgb(84, 84, 84);
     height: 100%;
     margin: 2px;
+    border: 5px solid rgb(84, 84, 84);
     border-radius: 20px;
     cursor: pointer;
+}
+
+.selected {
+    border: 5px solid rgb(13, 255, 0);
 }
 
 .fa-arrow-down {
@@ -331,7 +337,6 @@ span.tag {
 
 #UTubContent {
     background: gray;
-    width: 100%;
 }
 
 #UTubInfoDeck {
