--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -59,12 +59,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link to_register" href="{{url_for('register_user')}}">Register</a>
+                </li>
                 {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('login')}}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('register_user')}}">Register</a>
+                    <a class="nav-link to_register" href="{{url_for('register_user')}}">Register</a>
                 </li>
                 {% endif %}
             </ul>
