--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -51,6 +51,8 @@ input[type=checkbox]:hover {
 }
 
 input[type=radio] {
+    margin-left: 5px;
+    margin-right: 5px;
     padding-left: 5px;
     padding-right: 5px;
     border-radius: 15px;
@@ -75,7 +77,7 @@ input[type=radio]:checked {
 }
 
 input[type=radio]:hover {
-    box-shadow: 0px 0px 10px #1300ff;
+    box-shadow: 0px 0px 5px #1300ff;
 }
 
 span.tag {
