--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -97,6 +97,8 @@ span.tag {
     height: 100%;
     padding-top: 50px;
     padding-bottom: 20px;
+    padding-left: 2.5px;
+    padding-right: 2.5px;
     overflow-y: hidden;
 }
 
