--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -16,6 +16,11 @@ a {
 form {
     display: flex;
     flex-flow: column;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box; /* So the width will be 100% + 17px */
 }
 
 img {
@@ -114,8 +119,7 @@ span.tag {
     width: 100%;
     height: 90%;
     margin: 0px;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
 }
 
 .card {
